--- a/Views/CreateDb.xaml
+++ b/Views/CreateDb.xaml
@@ -1,21 +1,20 @@
-﻿<Window x:Class="Traffic_Lights.Views.ErrorWindow"
+﻿<Window x:Class="Traffic_Lights.Views.CreateDb"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Traffic_Lights.Views"
         mc:Ignorable="d"
-        Title="Критическая ошибка"
-        Height="200" Width="350"
-        MaxHeight="200" MaxWidth="350" 
-        MinHeight="200" MinWidth="350"
+        Title="Загрузка бд" 
+        Height="400" Width="350"
+        MaxHeight="400" MaxWidth="350" 
+        MinHeight="400" MinWidth="350"
         WindowStartupLocation="CenterScreen">
     <StackPanel>
-        <TextBlock Name="error_title"/>
         <TextBlock  
-            Name="error_text_block"
+            Name="text_block"
             Margin="0, 10, 0, 0" 
-            Height="142" 
+            Height="365" 
             Width="336"/>
     </StackPanel>
 </Window>
