--- a/Views/CreateDb.xaml
+++ b/Views/CreateDb.xaml
@@ -6,15 +6,24 @@
         xmlns:local="clr-namespace:Traffic_Lights.Views"
         mc:Ignorable="d"
         Title="Загрузка бд" 
-        Height="400" Width="350"
-        MaxHeight="400" MaxWidth="350" 
-        MinHeight="400" MinWidth="350"
-        WindowStartupLocation="CenterScreen">
+        Height="100" Width="350"
+        MaxHeight="100" MaxWidth="350" 
+        MinHeight="100" MinWidth="350"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None">
     <StackPanel>
+        <ProgressBar 
+            Minimum="0"
+            Maximum="100"
+            Name="pbStatus" 
+            IsIndeterminate="True" Height="25"
+            Margin="20, 10, 20, 0"
+        />
         <TextBlock  
             Name="text_block"
             Margin="0, 10, 0, 0" 
-            Height="365" 
-            Width="336"/>
+            Height="19" 
+            Width="336"
+        />
     </StackPanel>
 </Window>
