--- a/Views/MenuTasksView.xaml
+++ b/Views/MenuTasksView.xaml
@@ -27,12 +27,9 @@
                        Margin="0, 0, 0, 15"></TextBlock>
                 <Button
                     Content="{Binding SetupText}"
-                    Command="{Binding SetupClick}"/>
+                    Command="{Binding SetupClick}"
+                    IsEnabled="{Binding InstallInProgress}" Cursor="Hand"/>
             </StackPanel>
-            <TextBlock Text="{Binding SetupState}"
-                       HorizontalAlignment="Right"
-                       Margin="0, 25, 30, 0"
-                       />
         </Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock TextAlignment="Center" Text="{Binding TextMenuTasks}"></TextBlock>
