--- a/Views/CreateDb.xaml
+++ b/Views/CreateDb.xaml
@@ -24,6 +24,7 @@
             Margin="0, 10, 0, 0" 
             Height="19" 
             Width="336"
+            HorizontalAlignment="Center"
         />
     </StackPanel>
 </Window>
