--- a/Views/SetupBar.xaml
+++ b/Views/SetupBar.xaml
@@ -18,6 +18,7 @@
                      IsIndeterminate="True" Height="25"
                      Margin="20, 10, 20, 0"/>
         <TextBlock Margin="10, 20, 0, 0" 
-                   Text="{Binding SetupState}"/>
+                   Text="{Binding SetupState}"
+                   HorizontalAlignment="Center"/>
     </StackPanel>
 </Window>
